[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infolang-haystack"
dynamic = ["version"]
description = "InfoLang semantic memory integration for Haystack 2.x — recall/remember components and Tools."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "InfoLang", email = "engineering@infolang.ai" }]
keywords = ["infolang", "haystack", "semantic-memory", "rag", "retriever", "llm", "memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "infolang>=0.2,<0.3",
  "haystack-ai>=2.9,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.urls]
Homepage = "https://infolang.ai"
Documentation = "https://infolang.ai/docs/integrations/haystack"
Source = "https://github.com/InfoLang-Inc/infolang-haystack"
Issues = "https://github.com/InfoLang-Inc/infolang-haystack/issues"

[tool.hatch.version]
path = "src/infolang_haystack/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/infolang_haystack"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: hits a real InfoLang endpoint (requires INFOLANG_API_KEY); deselected by default",
]
addopts = "-m 'not live' --cov=infolang_haystack --cov-report=term-missing --cov-branch --cov-fail-under=90"

[tool.coverage.run]
source = ["src/infolang_haystack"]
branch = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/infolang_haystack"]

# Haystack pulls numpy transitively; its distributed stubs use 3.12-only syntax
# that mypy cannot parse under python_version 3.11. We don't use numpy directly,
# so skip following it rather than lowering our own strictness.
[[tool.mypy.overrides]]
module = ["numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
